<resources>

    <string name="app_name">Notable</string>
    <string name="menu_settings">Settings</string>
    <string name="hint2">Add a new reminder...</string>
    <string name="more_apps">More apps</string>
    <string name="general">General</string>
    <string name="create_shortcut">Create a shortcut in the notification bar</string>
    <string name="toggle_shortcut">Toggle shortcut</string>
    <string name="swiping_allow">Allow swiping</string>
    <string name="swiping_desc">Use the swiping gesture to mark a notification as done</string>
    <string name="donate">Upgrade to Plus</string>
    <string name="show_detail">Show detail screen</string>
    <string name="display_confirm">Display a detail screen when clicking on a notification.</string>
    <string name="long_click_title">Stay on long click</string>
    <string name="long_click_desc">Holding the save button saves the reminder and keeps the window open for the next one.</string>
    <string name="on_lock_screen_title">Show on lock screen</string>
    <string name="on_lock_screen_desc">Show notifications on lock screen.</string>

    <string name="extension_title">Notable</string>
    <string name="extension_description">Displays your current reminders.</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="onclick_text">Notification on click action</string>
    <string name="onclick_description">What to do when a notification is clicked.</string>
    <string name="choose">Choose an option</string>
    <string name="add_long">Add a reminder</string>
    <string name="dismiss_reminder">Dismiss reminder</string>
    <string name="hide_expandable_options">Show expandable buttons</string>
    <string name="hide_expadable_description">(Android 4.1+) Show actions when a notification is expanded</string>
    <string name="low_prio">Low priority</string>
    <string name="low_prio_info">(Andrid 4.1+) Display notifications in the end of the notification screen.</string>

    <string name="priority">Priority</string> 
    <string name="priority_info">(Andrid 4.1+)\n NORMAL: Notifications appear on top of notification screen\n
        LOW: Display Notable notifications under default notifications in the notification screen.\n
        MINIMUM: Display notifications at the end of the notification screen and hide icons in the status bar.</string>

    <string name="DarkTheme">Dark Theme</string>
    <string name="donate_only">Notable Plus only</string>
    <string-array name="priority_choice">
        <item>Normal Priority</item>
        <item>Low Priority</item>
        <item>Minimum Priority (Hides arrows in status bar)</item>
    </string-array>
    <string-array name="priority_values"> <!-- Do not translate! -->
        <item>normal</item>
        <item>low</item>
        <item>min</item>
    </string-array>
    <string name="theme">Theme</string>
    <string name="no_alarm">No Alarm Set</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="alarm">ALARM</string>
    <string name="ringtone_info">Reminder Sound</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="menu_history">History</string>
    <string name="not_set">Not Set</string>
    <string name="no_history">No reminders created yet.</string>
    <string name="deleted_item">Deleted</string>
    <string name="undo">Undo</string>
    <string name="enable_history">Enable History</string>
    <string name="enable_history_summary">Save dismissed notifications in history</string>
    <string name="menu_share">Recommend app</string>
    <string name="share_message">Hey, check out Notable - quick reminder app: https://play.google.com/store/apps/details?id=com.icechen1.notable</string>
</resources>
